add cmake version

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -445,6 +445,7 @@ android {
     externalNativeBuild {
         cmake {
             path "CMakeLists.txt"
+            version "3.22.1"
         }
     }
     buildTypes {
