--- a/package.json
+++ b/package.json
@@ -113,9 +113,10 @@
     "@types/babel__traverse": "^7.14.2",
     "@types/convert-source-map": "^2.0.0",
     "@types/invariant": "^2.2.35",
-    "@types/jest": "^27.4.0",
+    "@types/jest": "^29.0.0",
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.26",
+    "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
     "@typescript-eslint/parser": "^5.11.0",
     "babel-eslint": "^10.1.0",
@@ -133,7 +134,7 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-standard": "^5.0.0",
     "husky": "^7.0.4",
-    "jest": "^27.5.1",
+    "jest": "^29.0.0",
     "lint-staged": "^11.2.0",
     "madge": "^5.0.1",
     "prettier": "^2.5.1",
