--- a/plugin/package.json
+++ b/plugin/package.json
@@ -12,12 +12,12 @@
   "readmeFilename": "README.md",
   "scripts": {
     "prepare": "yarn generate",
-    "generate": "yarn tsc && yarn bundle && yarn clean",
+    "generate": "yarn tsc && yarn bundle && yarn format && yarn clean",
     "clean": "rm -f lib/*",
     "bundle": "esbuild ./lib/plugin.js --bundle --external:@babel --external:convert-source-map --external:fs --external:'../../package.json' --log-level=warning --platform=node --sourcemap=linked --outfile=build/plugin.js",
     "format": "prettier --write --list-different **/*.ts",
     "watch": "tsc-watch --onSuccess \"yarn bundle\"",
-    "lint": "eslint --max-warnings=0 --ext .ts --ignore-pattern 'types/*d.ts' ",
+    "lint": "eslint --max-warnings=0 --ext .ts",
     "type:check": "tsc --noEmit"
   },
   "types": "types/plugin.d.ts"
