fix react render hanging test https://github.com/facebook/react/issues/20756

--- a/package.json
+++ b/package.json
@@ -139,6 +139,7 @@
     "madge": "^5.0.1",
     "prettier": "^2.5.1",
     "react": "17.0.2",
+    "react-16-node-hanging-test-fix": "^1.0.0",
     "react-native": "0.72.0-rc.1",
     "react-native-builder-bob": "^0.18.3",
     "react-native-gesture-handler": "^2.9.0",
