--- a/package.json
+++ b/package.json
@@ -115,8 +115,8 @@
     "@types/invariant": "^2.2.35",
     "@types/jest": "^29.0.0",
     "@types/node": "^18.0.0",
-    "@types/react": "^18.0.26",
-    "@types/react-test-renderer": "^18.0.0",
+    "@types/react": "17.0.2",
+    "@types/react-test-renderer": "17.0.2",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
     "@typescript-eslint/parser": "^5.11.0",
     "babel-eslint": "^10.1.0",
@@ -139,7 +139,6 @@
     "madge": "^5.0.1",
     "prettier": "^2.5.1",
     "react": "17.0.2",
-    "react-16-node-hanging-test-fix": "^1.0.0",
     "react-native": "0.72.0-rc.1",
     "react-native-builder-bob": "^0.18.3",
     "react-native-gesture-handler": "^2.9.0",
