--- a/plugin/package.json
+++ b/plugin/package.json
@@ -17,7 +17,7 @@
     "bundle": "esbuild ./lib/plugin.js --bundle --external:@babel --external:convert-source-map --external:fs --external:'../../package.json' --log-level=warning --platform=node --sourcemap=linked --outfile=build/plugin.js",
     "format": "prettier --write --list-different **/*.ts",
     "watch": "tsc-watch --onSuccess \"yarn bundle\"",
-    "lint": "eslint --max-warnings=0 --ext .ts",
+    "lint": "eslint --max-warnings=0 --ext .ts .",
     "type:check": "tsc --noEmit"
   },
   "types": "types/plugin.d.ts"
