--- a/.github/workflows/build-npm-package-action.yml
+++ b/.github/workflows/build-npm-package-action.yml
@@ -12,6 +12,9 @@ on:
       upload_binaries:
         required: false
         type: boolean
+      publish_on_npm:
+        required: false
+        type: boolean
 
 jobs:
   build:
@@ -83,3 +86,9 @@ jobs:
           name: android-build-output
           path: android-build-output.zip
           retention-days: 5
+
+      - name: Publish package on npm
+        if: ${{ inputs.publish_on_npm }}
+        run: npm publish $PACKAGE_NAME
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
