--- a/.github/workflows/build-npm-package-action.yml
+++ b/.github/workflows/build-npm-package-action.yml
@@ -87,10 +87,13 @@ jobs:
           path: android-build-output.zip
           retention-days: 5
 
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '16.x'
+          registry-url: 'https://registry.npmjs.org'
+
       - name: Publish package on npm
         if: ${{ inputs.publish_on_npm }}
-        run: |
-          npm ci
-          npm publish $PACKAGE_NAME
+        run: npm publish $PACKAGE_NAME
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
