--- a/.github/workflows/build-npm-package-action.yml
+++ b/.github/workflows/build-npm-package-action.yml
@@ -93,4 +93,6 @@ jobs:
 
       - name: Publish package on npm
         if: ${{ inputs.publish_on_npm }}
-        run: npm publish $PACKAGE_NAME --registry https://registry.npmjs.org/
+        run: |
+          npm adduser
+          npm publish $PACKAGE_NAME --registry https://registry.npmjs.org/
