--- a/.github/workflows/build-npm-package-action.yml
+++ b/.github/workflows/build-npm-package-action.yml
@@ -25,6 +25,11 @@ jobs:
         with:
           ref: ${{ inputs.ref }}
 
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16.x
+          registry-url: https://registry.npmjs.org/
+
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
@@ -87,9 +92,6 @@ jobs:
           path: android-build-output.zip
           retention-days: 5
 
-      - uses: actions/setup-node@v3
-        with:
-          node-version: '16.x'
-          registry-url: 'https://registry.npmjs.org'
-
-      - run: npm publish --tag nightly
+      - run: yarn publish $PACKAGE_NAME --tag nightly
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
