--- a/.github/workflows/build-npm-package-action.yml
+++ b/.github/workflows/build-npm-package-action.yml
@@ -29,6 +29,7 @@ jobs:
         with:
           node-version: 16.x
           registry-url: https://registry.npmjs.org/
+          always-auth: true
 
       - name: Set up JDK 11
         uses: actions/setup-java@v3
