--- a/.github/workflows/build-npm-package-action.yml
+++ b/.github/workflows/build-npm-package-action.yml
@@ -25,12 +25,6 @@ jobs:
         with:
           ref: ${{ inputs.ref }}
 
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 16.x
-          registry-url: https://registry.npmjs.org/
-          always-auth: true
-
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
@@ -93,11 +87,9 @@ jobs:
           path: android-build-output.zip
           retention-days: 5
         
-      - run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
+      - run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NODE_AUTH_TOKEN }}" > ~/.npmrc
 
       - name: Setup upterm session
         uses: lhotari/action-upterm@v1
 
       - run: yarn publish $PACKAGE_NAME --tag nightly
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
