--- a/.github/workflows/build-npm-package-action.yml
+++ b/.github/workflows/build-npm-package-action.yml
@@ -15,6 +15,9 @@ on:
       publish_on_npm:
         required: false
         type: boolean
+    secrets:
+      NODE_AUTH_TOKEN:
+        required: true
 
 jobs:
   build:
@@ -24,6 +27,12 @@ jobs:
         uses: actions/checkout@v3
         with:
           ref: ${{ inputs.ref }}
+
+      - name: Setup Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16.x
+          registry-url: https://registry.npmjs.org/
 
       - name: Set up JDK 11
         uses: actions/setup-java@v3
@@ -86,10 +95,7 @@ jobs:
           name: android-build-output
           path: android-build-output.zip
           retention-days: 5
-        
-      - run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NODE_AUTH_TOKEN }}" > ~/.npmrc
 
-      - name: Setup upterm session
-        uses: lhotari/action-upterm@v1
-
-      - run: yarn publish $PACKAGE_NAME --tag nightly
+      - run: npm publish $PACKAGE_NAME --tag nightly
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
