--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "@babel/plugin-proposal-class-properties": "^7.16.7",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.0.0",
     "@babel/plugin-proposal-optional-chaining": "^7.0.0",
+    "@babel/plugin-proposal-private-methods": "^7.18.6",
     "@babel/plugin-transform-arrow-functions": "^7.0.0",
     "@babel/plugin-transform-shorthand-properties": "^7.0.0",
     "@babel/plugin-transform-template-literals": "^7.0.0",
