--- a/package.json
+++ b/package.json
@@ -143,6 +143,7 @@
     "react-native-builder-bob": "^0.18.3",
     "react-native-gesture-handler": "^2.9.0",
     "react-test-renderer": "17.0.2",
+    "shelljs": "^0.8.5",
     "typescript": "^4.1.3"
   },
   "lint-staged": {
