--- a/app/package.json
+++ b/app/package.json
@@ -1,7 +1,8 @@
 {
   "private": true,
   "scripts": {
-    "lint": "eslint --max-warnings=0 ."
+    "lint": "eslint --max-warnings=0 .",
+    "postinstall": "patch-package"
   },
   "peerDependencies": {
     "react": "*",
@@ -11,8 +12,8 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
-    "@react-native-community/slider": "^4.4.2",
     "@react-native-async-storage/async-storage": "^1.18.1",
+    "@react-native-community/slider": "^4.4.2",
     "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-native-picker/picker": "^2.4.9",
     "@react-navigation/native": "^6.1.6",
@@ -32,6 +33,7 @@
     "@tsconfig/react-native": "^2.0.3",
     "@types/d3-shape": "^3.1.1",
     "eslint": "^8.36.0",
+    "patch-package": "^7.0.0",
     "prettier": "^2.8.7",
     "typescript": "^5.0.2"
   }
