--- a/WebExample/package.json
+++ b/WebExample/package.json
@@ -1,7 +1,7 @@
 {
   "name": "webexample",
   "version": "1.0.0",
-  "main": "AppEntry.js",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start --web",
     "start:noplugin": "DISABLE_BABEL_PLUGIN=1 yarn start",
@@ -11,14 +11,15 @@
   "dependencies": {
     "@expo/webpack-config": "^18.0.0",
     "@react-native-community/slider": "^4.4.2",
-    "expo": "~46.0.13",
+    "expo": "~48.0.10",
     "expo-status-bar": "~1.4.0",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
-    "react-native": "0.69.6",
-    "react-native-gesture-handler": "^2.9.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.71.6",
+    "react-native-gesture-handler": "^2.10.0",
+    "react-native-pager-view": "5.4.24",
     "react-native-reanimated": "link:../",
-    "react-native-web": "~0.18.7"
+    "react-native-web": "~0.18.12"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
