--- a/app/package.json
+++ b/app/package.json
@@ -1,7 +1,8 @@
 {
   "private": true,
   "scripts": {
-    "lint": "eslint --max-warnings=0 ."
+    "lint": "eslint --max-warnings=0 .",
+    "postinstall": "patch-package"
   },
   "peerDependencies": {
     "react": "*",
@@ -21,18 +22,19 @@
     "d3-shape": "^3.2.0",
     "react-dom": "18.0.0",
     "react-native-box2d": "^0.2.5",
-    "react-native-gesture-handler": "^2.9.0",
+    "react-native-gesture-handler": "^2.10.0",
     "react-native-pager-view": "5.4.24",
     "react-native-reanimated": "link:../",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-svg": "^13.8.0",
-    "react-native-web": "~0.18.7"
+    "react-native-web": "~0.18.12"
   },
   "devDependencies": {
     "@tsconfig/react-native": "^2.0.3",
     "@types/d3-shape": "^3.1.1",
     "eslint": "^8.36.0",
+    "patch-package": "^7.0.0",
     "prettier": "^2.8.7",
     "typescript": "^5.0.2"
   }
