fix tsconfig.json and remove redundant config from bob builder

--- a/package.json
+++ b/package.json
@@ -166,12 +166,7 @@
     "output": "lib",
     "targets": [
       "module",
-      [
-        "typescript",
-        {
-          "project": "tsconfig.json"
-        }
-      ]
+      "typescript"
     ]
   },
   "sideEffects": [
