--- a/WebExample/package.json
+++ b/WebExample/package.json
@@ -29,7 +29,7 @@
     "@types/react-native": "~0.69.1",
     "eslint": "^8.19.0",
     "prettier": "^2.4.1",
-    "typescript": "~4.3.5"
+    "typescript": "^5.1.3"
   },
   "private": true
 }
