Remove react-native-reanimated.d.ts (#4519)
## Motivation

Since React Native Reanimated started as a pure JavaScript library at
some point it was decided to migrate to TypeScript. Code base was
complex enough for this task to be difficult and automatically generated
type definitions weren't coherent with the API. Therefore a manually
written file was required to provide better types for people that use
TypeScript. However this created problems on its own as not all of the
changes were put into the `d.ts` file and differences between inferred
type and manual type could be very significant. After time we circled
back to complete the TypeScript migration and remove this intermediate
`d.ts` file.

## Summary

The goal of this PR is to remove `react-native-reanimated.d.ts` file
that had all of our manually written type definitions in favor of
automatically generated files stemming from source files. Since this was
still a strenuous task we've decided not to fix all the internal types
just yet and preserve only the necessary manually written types from the
`d.ts` file. There's quite a lot of type casting due to that but this is
planned to be corrected in the future as well.

Fixes: #4616, #4556 

## Test plan

I've added the following script to our `package.json`: `yarn
type:check-api`. It compiles source code of our examples with the use of
autogenerated type definitions. It was my main tool of performing this
migration an was extremely handy.

All of our static check were useful as well - of course linting and type
checking the source code.

Since our Examples don't cover all of the cases of our API usage
(although I believe they cover a significant part of it) and we've kept
as little of the `d.ts` file as possible it's to be expected for type
errors to be reported in the future - but I think it's the better way to
do it than to attempt to generate more API use cases by us.

---------

Co-authored-by: Krzysztof Piaskowy <krzysztof.piaskowy@swmansion.com>
Co-authored-b

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,9 @@
     "esModuleInterop": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
+    "paths": {
+      "react-native-reanimated": ["./src"]
+    },
     "resolveJsonModule": true
   },
   "include": ["src"]
