--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "react-native": "*"
   },
   "devDependencies": {
+    "-": "^0.0.1",
     "@babel/cli": "^7.20.0",
     "@babel/core": "^7.20.0",
     "@babel/plugin-proposal-class-properties": "^7.16.7",
@@ -125,12 +126,13 @@
     "babel-plugin-module-resolver": "^5.0.0",
     "clang-format": "^1.6.0",
     "code-tag": "^1.1.0",
-    "eslint": "^8.8.0",
+    "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-import-resolver-babel-module": "^5.3.1",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jest": "^27.2.1",
+    "eslint-plugin-no-inline-styles": "^1.0.5",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-standard": "^5.0.0",
