--- a/.github/workflows/build-monorepo.yml
+++ b/.github/workflows/build-monorepo.yml
@@ -13,6 +13,13 @@ on:
   push:
     branches:
       - main
+    paths:
+      - .github/workflows/build-monorepo.yml
+      - .github/workflows/build-monorepo-action.yml
+      - RNReanimated.podspec
+      - scripts/reanimated_utils.rb
+      - android/build.gradle
+  workflow_call:
 
 jobs:
   build_android_reanimated_non_hoisted:
