Add more eslint rules (#4672)
<!-- Thanks for submitting a pull request! We appreciate you spending
the time to work on these changes. Please follow the template so that
the reviewers can easily understand what the code changes affect. -->

## Summary

<!-- Explain the motivation for this PR. Include "Fixes #<number>" if
applicable. -->

* Rules for whole repo:
* '`@typescript-eslint/no-duplicate-type-constituents': 'error'` - means
that types like `number|number` are not allowed
  * `eqeqeq: 'error' - you can't compare with `==`, use `===` instead
  
* `'no-unreachable': 'error'` - no unreachable code, especially inside a
function, after return statement.
  
* Rules for examples in folder app:
  * `'react-native/no-unused-styles': 'error'`,
* `'react-native/no-raw-text': 'off'`, - this rule is very convenient,
but due to this bug
[LINK](https://github.com/Intellicode/eslint-plugin-react-native/issues/270)
we can't use it with CI 😠
  * `'no-inline-styles/no-inline-styles': 'error'`
* `'react-native/no-inline-styles': 'off'`, (this rule does not allow
variable styles with ternary operators, so I've used the one above)
  
  * `'react-native/no-single-element-style-arrays': 'error'`,
* Create separate .eslintrc.js config for tests with separate rules
  * `'jest/no-disabled-tests': 'warn'`,
  
  * `'jest/no-focused-tests': 'error'`,
  * `'jest/no-identical-title': 'error'`,
  * `'jest/prefer-to-have-length': 'warn'`,
  * `'jest/valid-expect': 'error'`,

## Test plan

<!-- Provide a minimal but complete code snippet that can be used to
test out this change along with instructions how to run it and a
description of the expected behavior. -->
CI check pass ✅

---------

Co-authored-by: Aleksandra Cynk <aleksandracynk@swmansion.com>
Co-authored-by: Tomasz Żelawski <40713406+tjzel@users.noreply.github.com>

--- a/plugin/tsconfig.json
+++ b/plugin/tsconfig.json
@@ -13,5 +13,6 @@
     "declaration": true,
     "declarationDir": "types"
   },
-  "files": ["src/plugin.ts"]
+  "files": ["src/plugin.ts"],
+  "include":["src/**/*"]
 }
