--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -64,7 +64,7 @@ jobs:
 
       - name: Install Pods
         working-directory: ${{ matrix.working-directory }}/ios
-        run: USE_FRAMEWORKS=static && pod install
+        run: export USE_FRAMEWORKS=static && pod install
 
       - name: Restore build artifacts from cache
         uses: actions/cache@v3
