--- a/app/package.json
+++ b/app/package.json
@@ -26,7 +26,7 @@
     "react-native-pager-view": "5.4.24",
     "react-native-reanimated": "link:../",
     "react-native-safe-area-context": "^4.6.3",
-    "react-native-screens": "^3.22.0",
+    "react-native-screens": "github:software-mansion/react-native-screens#1d8ab85967e1285b7191c4f65d7e54ea77e0fd94",
     "react-native-svg": "^13.9.0",
     "react-native-web": "~0.18.12"
   },
