--- a/.github/workflows/check-static-framework-nightly.yml
+++ b/.github/workflows/check-static-framework-nightly.yml
@@ -27,11 +27,11 @@ jobs:
       - name: Install Paper Pods
         if: ${{ matrix.react-native-architecture == 'Paper' }}
         working-directory: app/ios
-        run: export USE_FRAMEWORKS=static && pod install
+        run: export USE_FRAMEWORKS=static NO_FLIPPER=1 && pod install
       - name: Install Fabric Pods
         if: ${{ matrix.react-native-architecture == 'Fabric' }}
         working-directory: app/ios
-        run: export USE_FRAMEWORKS=static RCT_NEW_ARCH_ENABLED=1 && pod install
+        run: export USE_FRAMEWORKS=static NO_FLIPPER=1 RCT_NEW_ARCH_ENABLED=1 && pod install
       - name: Build app
         working-directory: app
         run: npx react-native run-ios
