--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -51,7 +51,7 @@ jobs:
 
       - name: Install app node_modules
         working-directory: ${{ matrix.working-directory }}
-        run: yarn install --frozen-lockfile && yarn remove react-native-box2d
+        run: yarn install --frozen-lockfile
 
       - name: Restore Pods from cache
         uses: actions/cache@v3
@@ -64,7 +64,7 @@ jobs:
 
       - name: Install Pods
         working-directory: ${{ matrix.working-directory }}/ios
-        run: export USE_FRAMEWORKS=static && pod install
+        run: pod install
 
       - name: Restore build artifacts from cache
         uses: actions/cache@v3
