--- a/.github/workflows/check-static-framework-nightly.yml
+++ b/.github/workflows/check-static-framework-nightly.yml
@@ -22,7 +22,7 @@ jobs:
         run: npx react-native init app
       - name: Install dependencies
         working-directory: app
-        run: yarn add github:software-mansion/react-native-reanimated#${{ github.ref }}
+        run: yarn add github:software-mansion/react-native-reanimated
       - name: Install Paper Pods
         if: ${{ matrix.react-native-architecture == 'Paper' }}
         working-directory: app/ios
