--- a/.github/workflows/build-npm-package-action.yml
+++ b/.github/workflows/build-npm-package-action.yml
@@ -34,6 +34,12 @@ jobs:
           node-version: 16.x
           registry-url: https://registry.npmjs.org/
 
+      - run: |
+          echo "::remove-matcher owner=eslint-compact::"
+          echo "::remove-matcher owner=eslint-stylish::"
+      - run: |
+          echo "::remove-matcher owner=tsc::"
+
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
