--- a/.github/workflows/static-root-checks.yml
+++ b/.github/workflows/static-root-checks.yml
@@ -25,6 +25,12 @@ jobs:
         with:
           node-version: 16
           cache: 'yarn'
+      - run: |
+          echo "::remove-matcher owner=eslint-compact::"
+          echo "::remove-matcher owner=eslint-stylish::"
+      - run: |
+          echo "::remove-matcher owner=tsc::"
+
       - name: Install node dependencies
         run: yarn
       - name: Check types
