--- a/.github/workflows/validate-plugin.yml
+++ b/.github/workflows/validate-plugin.yml
@@ -24,6 +24,12 @@ jobs:
         with:
           node-version: 16
           cache: 'yarn'
+      - run: |
+          echo "::remove-matcher owner=eslint-compact::"
+          echo "::remove-matcher owner=eslint-stylish::"
+      - run: |
+          echo "::remove-matcher owner=tsc::"
+
       - name: Install node dependencies
         run: yarn
       - name: Install plugin dependencies
