--- a/package.json
+++ b/package.json
@@ -147,6 +147,7 @@
     "react-native-web": "~0.18.12",
     "react-test-renderer": "17.0.2",
     "shelljs": "^0.8.5",
+    "ts-prune": "^0.10.3",
     "typescript": "^4.1.3"
   },
   "lint-staged": {
