--- a/.github/workflows/build-npm-package-action.yml
+++ b/.github/workflows/build-npm-package-action.yml
@@ -33,12 +33,8 @@ jobs:
         with:
           node-version: 16.x
           registry-url: https://registry.npmjs.org/
-
       - run: |
-          echo "::remove-matcher owner=eslint-compact::"
-          echo "::remove-matcher owner=eslint-stylish::"
-      - run: |
-          echo "::remove-matcher owner=tsc::"
+          scripts/clear-annotations.sh
 
       - name: Set up JDK 11
         uses: actions/setup-java@v3
