--- a/.github/workflows/validate-java.yml
+++ b/.github/workflows/validate-java.yml
@@ -26,10 +26,7 @@ jobs:
           node-version: 16
           cache: 'yarn'
       - run: |
-          echo "::remove-matcher owner=eslint-compact::"
-          echo "::remove-matcher owner=eslint-stylish::"
-      - run: |
-          echo "::remove-matcher owner=tsc::"
+          scripts/clear-annotations.sh
 
       - name: Install node dependencies
         run: yarn
