--- a/.github/workflows/docs-check.yml
+++ b/.github/workflows/docs-check.yml
@@ -22,8 +22,8 @@ jobs:
         with:
           node-version: 16
           cache: 'yarn'
-      - run: |
-          scripts/clear-annotations.sh
+      - name: Clear annotations
+        run: scripts/clear-annotations.sh
 
       - name: Install node dependencies
         working-directory: ${{ env.WORKING_DIRECTORY }}
