--- a/.github/workflows/validate-plugin.yml
+++ b/.github/workflows/validate-plugin.yml
@@ -24,8 +24,8 @@ jobs:
         with:
           node-version: 16
           cache: 'yarn'
-      - run: |
-          scripts/clear-annotations.sh
+      - name: Clear annotations
+        run: scripts/clear-annotations.sh
 
       - name: Install node dependencies
         run: yarn
