--- a/.github/workflows/build-npm-package-action.yml
+++ b/.github/workflows/build-npm-package-action.yml
@@ -33,6 +33,8 @@ jobs:
         with:
           node-version: 16.x
           registry-url: https://registry.npmjs.org/
+      - name: Clear annotations
+        run: scripts/clear-annotations.sh
 
       - name: Set up JDK 11
         uses: actions/setup-java@v3
