--- a/.github/workflows/validate-plugin.yml
+++ b/.github/workflows/validate-plugin.yml
@@ -24,6 +24,9 @@ jobs:
         with:
           node-version: 16
           cache: 'yarn'
+      - name: Clear annotations
+        run: scripts/clear-annotations.sh
+
       - name: Install node dependencies
         run: yarn
       - name: Install plugin dependencies
