--- a/app/package.json
+++ b/app/package.json
@@ -20,11 +20,13 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "d3-shape": "^3.2.0",
+    "lottie-react-native": "5.1.5",
     "react-dom": "18.0.0",
     "react-native-box2d": "^0.2.5",
     "react-native-gesture-handler": "^2.12.0",
     "react-native-pager-view": "5.4.24",
     "react-native-reanimated": "link:../",
+    "react-native-redash": "^18.1.0",
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "github:software-mansion/react-native-screens#1d8ab85967e1285b7191c4f65d7e54ea77e0fd94",
     "react-native-svg": "^13.9.0",
