--- a/Example/package.json
+++ b/Example/package.json
@@ -18,6 +18,7 @@
     "@react-native-picker/picker": "^2.4.9",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
+    "lottie-react-native": "5.1.5",
     "react": "18.2.0",
     "react-dom": "^16.13.1",
     "react-native": "0.72.1",
