--- a/.github/workflows/check-expo-dev-client-nightly.yml
+++ b/.github/workflows/check-expo-dev-client-nightly.yml
@@ -7,6 +7,9 @@ on:
     - cron: '37 19 * * *'
   workflow_dispatch:
 
+env:
+  SCRIPT_PATH: node_modules/react-native-reanimated/.github/workflows/helper/configureDevClient.js
+
 jobs:
   build_ios:
     runs-on: macos-12
@@ -23,20 +26,26 @@ jobs:
       - name: Install expo-dev-client
         working-directory: app
         run: npx expo install expo-dev-client
+      - name: Setup configuration
+        working-directory: app
+        run: node ${{ env.SCRIPT_PATH }} setBundleIdentifier
+      - name: Expo prebuild
+        working-directory: app
+        run: npx expo prebuild
       - name: Install Reanimated
         working-directory: app
         run: npm install github:software-mansion/react-native-reanimated
-      - name: Install Paper Pods
-        if: ${{ matrix.react-native-architecture == 'Paper' }}
+      - name: Set Fabric
+        if: ${{ matrix.react-native-architecture == 'Fabric' }}
+        working-directory: app
+        run: node ${{ env.SCRIPT_PATH }} setupFabricIOS
+      - name: Install Pods
         working-directory: app/ios
         run: pod install
-      - name: Install Fabric Pods
-        if: ${{ matrix.react-native-architecture == 'Fabric' }}
-        working-directory: app/ios
-        run: export RCT_NEW_ARCH_ENABLED=1 && pod install
       - name: Build app
         working-directory: app
         run: npx expo run:ios
+
   build_android:
     runs-on: ubuntu-latest
     strategy:
@@ -52,13 +61,19 @@ jobs:
       - name: Install expo-dev-client
         working-directory: app
         run: npx expo install expo-dev-client
+      - name: Setup configuration
+        working-directory: app
+        run: node ${{ env.SCRIPT_PATH }} setBundleIdentifier
+      - name: Expo prebuild
+        working-directory: app
+        run: npx expo prebuild
       - name: Install Reanimated
         working-directory: app
         run: npm install github:software-mansion/react-native-reanimated
-      - name: Install Fabric Pods
+      - name: Set Fabric
         if: ${{ matrix.react-native-architecture == 'Fabric' }}
-        working-directory: app/android
-        run: sed -i 's/newArchEnabled=false/newArchEnabled=true/' gradle.properties
+        working-directory: app
+        run: node ${{ env.SCRIPT_PATH }} setupFabricAndroid
       - name: Build app
         working-directory: app
         run: npx expo run:android
