--- a/MacOSExample/package.json
+++ b/MacOSExample/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "react": "18.2.0",
     "react-native": "0.71.12",
-    "react-native-macos": "^0.71.0-0"
+    "react-native-macos": "^0.71.0-0",
+    "react-native-reanimated": "link:../"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
