--- a/.github/workflows/static-root-checks.yml
+++ b/.github/workflows/static-root-checks.yml
@@ -27,7 +27,6 @@ jobs:
           cache: 'yarn'
       - name: Clear annotations
         run: scripts/clear-annotations.sh
-
       - name: Install node dependencies
         run: yarn
       - name: Check types
@@ -36,7 +35,9 @@ jobs:
         run: yarn type:check-api
       - name: Lint
         run: yarn lint:js
-      - name: Finding circular dependencies
+      - name: Find unused code
+        run: yarn find-unused-code:js
+      - name: Find circular dependencies
         run: yarn circular_dependency_check
-      - name: Jest test:unit
+      - name: Run jest unit tests
         run: yarn test:unit
