--- a/package.json
+++ b/package.json
@@ -144,6 +144,7 @@
     "react-native": "0.72.1",
     "react-native-builder-bob": "^0.18.3",
     "react-native-gesture-handler": "^2.12.0",
+    "react-native-macos": "^0.71.0-0",
     "react-native-web": "~0.18.12",
     "react-test-renderer": "17.0.2",
     "shelljs": "^0.8.5",
